feat: implement CRUD operations for Material, Servico, Usuario, and Veiculo entities with corresponding request and response DTOs